...

    <string name="line_item_details_screen_title">Details</string>
    <string name="line_item_details_screen_subtitle">Korrigieren Sie falsche Werte</string>

    <!-- String customization examples -->

    <!--<string name="gc_title_camera">Dokument fotografieren</string>-->
    <!--<string name="gc_title_onboarding">Anleitung</string>-->
    <!--<string name="gc_title_review">Foto überprüfen</string>-->

    <!--<string name="gc_show_onboarding">Hilfe</string>-->
    <!--<string name="gc_select_from_camera_roll">Eigenes Bild auswählen</string>-->

    <!--<string name="gc_camera_error_no_permission">Um Dokumente zu fotografieren, erlaube Gini Pay den Zugriff auf die Kamera.</string>-->
    <!--<string name="gc_camera_error_no_permission_button_title">Zugriff erlauben</string>-->
...
