...
    </FrameLayout>

    <ImageButton
        android:id="@+id/gc_button_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gc_button_next"
        android:layout_alignEnd="@+id/gc_button_next"
        android:layout_marginBottom="@dimen/gc_review_button_rotate_vertical_margin"
        android:layout_marginEnd="@dimen/gc_review_button_rotate_horizontal_margin"
        android:background="@drawable/gc_review_fab_mini_background"
        android:src="@drawable/gc_review_button_rotate" />

...
