...
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:background="#000">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/gc_onboarding_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/gc_medium"
        android:contentDescription="@string/gc_onboarding_viewpager_content_description"
        app:layout_constraintBottom_toTopOf="@+id/gc_layout_page_indicators"
        app:layout_constraintEnd_toEndOf="parent"
...
