...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/gc_camera_title"
            style="@style/GiniCaptureTheme.Typography.Caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/gc_large"
            android:paddingTop="@dimen/gc_large"
            android:text="@string/gc_camera_info_label_invoice_and_qr"
            android:textColor="@color/gc_light_01"
            app:layout_constraintBottom_toTopOf="@id/gc_button_camera_trigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/gc_button_camera_trigger"
            android:layout_width="wrap_content"
...
            app:layout_constraintBottom_toBottomOf="@+id/gc_button_camera_trigger"
            app:layout_constraintEnd_toStartOf="@+id/gc_flash_group_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gc_button_camera_trigger">

            <ImageButton
                android:id="@+id/gc_button_import_document"
                android:layout_width="@dimen/gc_large_48"
                android:layout_height="@dimen/gc_large_48"
                android:background="@null"
                android:importantForAccessibility="no"
                android:clickable="false"
                android:scaleType="centerInside"
...
