<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/gc_action_show_onboarding"
        android:icon="@drawable/gc_help_icon"
        android:title="@string/gc_help"
        app:iconTint="?attr/colorOnBackground"
        app:showAsAction="always" />
</menu>
