<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context="net.gini.android.capture.help.HelpFragment">

    <net.gini.android.capture.view.InjectedViewContainer
        android:id="@+id/gc_injected_navigation_bar_container_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gc_help_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:layout_marginTop="@dimen/gc_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gc_injected_navigation_bar_container_top"
        tools:listitem="@layout/gc_item_help" />


</androidx.constraintlayout.widget.ConstraintLayout>
