<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gc_help_item_title"
        style="@style/GiniCaptureTheme.Typography.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/gc_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gc_forward_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/gc_help_item_photo_tips_title" />

    <ImageView
        android:id="@+id/gc_forward_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gc_medium_12"
        android:src="@drawable/gc_forward_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/gc_help_item_divider_height"
        android:background="?attr/dividerColor"
        android:layout_marginStart="@dimen/gc_large"
        android:id="@+id/gc_help_item_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>