...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:padding="@dimen/gc_large">

    <Button
        android:id="@+id/gc_skip"
        style="@style/GiniCaptureTheme.Widget.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gc_large_40"
        android:layout_marginEnd="@dimen/gc_medium"
        android:layout_marginBottom="@dimen/gc_large_48"
...
