...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/button_startScanner"
                style="@style/PhotoPaymentButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_large"
                android:paddingVertical="@dimen/gc_medium_12"
                android:text="@string/start_gini_photo_payment"
...
